k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ig-analyzer-svc
  namespace: default
spec:
  selector:
    app: ig-analyzer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
